do a bunch of really cool things for the kaboomers gamemode, aka make it exist :D